nivo pie chart implemented, will later be fixed to render updated data

--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -1,30 +1,39 @@
 .dashboard {
-    display: flex;
-    min-height: 100vh; /* Set the minimum height of the dashboard to the full viewport height */
-  }
-  
-  .sidebar {
-    width: 200px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  
-  .sidebar-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: none;
-    background-color: #ddd;
-    color: #333;
-    font-size: 16px;
-    text-align: left;
-    cursor: pointer;
-  }
-  
-  .content {
-    flex: 1;
-    padding: 20px;
-    background-color: #fff;
-  }
-  
+  display: flex;
+  min-height: 100vh; /* Set the minimum height of the dashboard to the full viewport height */
+}
+
+.sidebar {
+  width: 200px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.sidebar-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #ddd;
+  color: #333;
+  font-size: 16px;
+  text-align: left;
+  cursor: pointer;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+  background-color: #fff;
+}
+
+.pie-chart-div {
+  height: 400px !important;
+  width: 600px !important;
+  text-align: center;
+}
+.pie-chart-div .pie-chart-2 {
+  height: 100%;
+  width: 100%;
+}
