--- a/finance-mate/src/index.css
+++ b/finance-mate/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   /* background-image: url(/src/images/layered-waves-haikei_); */
