--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -8,9 +8,9 @@ body {
 
 .sidebar {
   width: 200px;
-  background: linear-gradient(#05377f, transparent),
-    linear-gradient(to top left, #3886f7, transparent),
-    linear-gradient(to top right, #8ca4fc, transparent);
+  background: linear-gradient(#008000, transparent),
+    linear-gradient(to top left, black, transparent),
+    linear-gradient(to top right, #006400, transparent);
   background-blend-mode: screen;
   padding: 20px;
 }
@@ -34,8 +34,8 @@ body {
 
 /* Hover effect */
 .sidebar-button:hover {
-  background-color: #c0c0c0;
-  box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px black;
+  background-color: #32cd32;
+  box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px #006400;
 }
 
 .content {
@@ -76,9 +76,9 @@ button::after {
 }
 
 .plaid-button {
-  background: linear-gradient(#05377f, transparent),
-    linear-gradient(to top left, #3886f7, transparent),
-    linear-gradient(to top right, #8ca4fc, transparent);
+  background: linear-gradient(grey, transparent),
+    linear-gradient(to top left, #2e8b57, transparent),
+    linear-gradient(to top right, #006400, transparent);
   background-blend-mode: screen;
   color: black;
   padding: 10px 20px;
@@ -91,8 +91,8 @@ button::after {
 }
 
 .plaid-button:hover {
-  background-color: darkblue;
-  box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px #3886f7;
+  background-color: #7cfc00;
+  box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px #006400;
 }
 
 /* .content{
