--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -49,9 +49,9 @@ body {
 
 .pie-chart-div {
   height: 400px !important;
-  width: 800px !important;
+  width: 600px !important;
   text-align: center;
-  margin: 0 auto 70px;
+  margin: 0 0 50px;
 }
 .pie-chart-div h1 {
   margin: 1rem 0;
@@ -59,6 +59,15 @@ body {
 .pie-chart-div .pie-chart-2 {
   height: 100%;
   width: 100%;
+  text-align: left;
+}
+/* filter arrows in expense-view */
+.filter-arrows {
+  cursor: pointer !important;
+  transition: color 0.5s ease-in !important;
+}
+.filter-arrows:hover {
+  color: #05377f;
 }
 
 /* for button hover */
