--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -6,18 +6,18 @@ body {
   min-height: 100vh; /* Set the minimum height of the dashboard to the full viewport height */
 }
 
-.sidebar {
+/* .sidebar {
   width: 230px;
   background: linear-gradient(#008000, transparent),
     linear-gradient(to top left, black, transparent),
     linear-gradient(to top right, #006400, transparent);
   background-blend-mode: screen;
   padding: 20px;
-}
+}*/
 
 .sidebar-button {
   display: block;
-  width: 100%;
+  width: 80%;
   padding: 10px;
   margin-bottom: 10px;
   border: none;
@@ -29,14 +29,15 @@ body {
   cursor: pointer;
   font-weight: bold;
   font-family: "Times New Roman", Times, serif;
-  transition: background-color 0.3s ease; /* Add transition for smooth effect */
+  transition: background-color 0.3s ease; 
+  /* Add transition for smooth effect */
 }
 
 /* Hover effect */
 .sidebar-button:hover {
   background-color: #32cd32;
   box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px #006400;
-}
+} */
 
 .content {
   flex: 1;
