--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -104,7 +104,8 @@ button::after {
 }
 
 .plaid-button:hover {
-  background-color: #7cfc00;
+  background-color: white;
+  color: black;
   box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px #006400;
 }
 
