--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -29,7 +29,7 @@ body {
   cursor: pointer;
   font-weight: bold;
   font-family: "Times New Roman", Times, serif;
-  transition: background-color 0.3s ease; 
+  transition: background-color 0.3s ease;
   /* Add transition for smooth effect */
 }
 
@@ -37,8 +37,7 @@ body {
 .sidebar-button:hover {
   background-color: #32cd32;
   box-shadow: 0 0 5px white, 0 0 25px white, 0 0 25px white, 0 0 100px #006400;
-} */
-
+}
 .content {
   flex: 1;
   padding: 0 20px 20px;
@@ -46,6 +45,7 @@ body {
     linear-gradient(to top left, #fffafa, transparent),
     linear-gradient(to top right, white, transparent);
   background-blend-mode: screen;
+  padding: 0 20px 50px !important;
 }
 
 .pie-chart-div {
@@ -95,7 +95,7 @@ button::after {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
