--- a/finance-mate/src/App.css
+++ b/finance-mate/src/App.css
@@ -1,6 +1,36 @@
 body {
   /* background-color: rgb(71, 132, 237); */
+  /* background-color: #131316;
+  color: #ffffff;
+  font-family: 'Poppins', sans-serif;
+  padding: 0;
+  margin: 0; */
+
 }
+
+section{
+  display: grid;
+  place-items: center;
+  align-content: center;
+  min-height: 100vh;
+
+}
+
+.hidden{
+  opacity: 0;
+  transition: all 1s;
+}
+.show{
+  opacity: 1;
+}
+
+@media(perfers-reduced-motion){
+  .hidden{
+    transition: none;
+  }
+}
+
+
 .dashboard {
   display: flex;
   min-height: 100vh; /* Set the minimum height of the dashboard to the full viewport height */
